// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root"
>
  <label
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <textarea
      className="input"
      id="test"
      label="label"
      onChange={null}
      placeholder={null}
      required={false}
      rows={3}
    />
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root"
>
  <label
    htmlFor="test"
  >
    <div
      className="isLabelRequired"
    >
      label
    </div>
    <textarea
      className="isInputInvalid"
      id="test"
      label="label"
      onChange={null}
      placeholder="placeholder"
      required={true}
      rows={5}
      value="value"
    />
  </label>
  <div
    className="description"
  >
    some help
  </div>
  <div
    className="error"
  >
    error
  </div>
</div>
`;

exports[`rendering renders correctly with hidden label 1`] = `
<div
  className="root"
>
  <label
    htmlFor="test"
  >
    <div
      className="isLabelHidden"
    >
      label
    </div>
    <textarea
      className="input"
      id="test"
      label="label"
      onChange={null}
      placeholder={null}
      required={false}
      rows={3}
    />
  </label>
</div>
`;
